--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,48 +1,49 @@
-<div class="container">
-  <div class="form-wrapper"> 
-    <%= simple_form_for :search, method: "get", class: 'form-inline' do |f| %>
-      <div class="form-row">
-        <div class="col-3">
-          <%= f.input :country,  as: :string, required: false,
-                      input_html: {class: 'form-control-sm', style: "width: 200px;", value: params.dig(:search, :country) }%>
-        </div>
-         <div class="col-2">
-          <%= f.input :level, collection: Spot.level.values, as: :radio_buttons, required: false, input_html: {class: 'form-control-sm', value: params.dig(:search, :level) }%>
-        </div>
-        <div class="col-2">
-          <%= f.input :beach_type, collection: Spot.beach_type.values, as: :radio_buttons, required: false, input_html: {class: 'form-control-sm', value: params.dig(:search, :beach_type) }%>
-        </div>
-      </div>
-      <%= f.submit "Search", class: "btn btn-primary" %>
-      <%= link_to "Reset the search", spots_path, class: "btn btn-primary" %>
-       
-    <% end %>
-  </div> 
-</div>
+
 
 <div style="display: grid; grid-template-columns: 2fr 1.4fr; grid-gap: 2px;">
-
-  <div class="cards my-5">
-    <% @spots.each do |spot| %>
-      <div class="card-spot">
-        <% if spot.photos.attached? %>
-          <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 350, crop: :fill), spot_path(spot)) %>
-        <% end %>
-        <div class="card-spot-infos d-flex justify-content-between align-items-start">
-          <div>
-            <h2><%= link_to spot.name, spot_path(spot) %></h2>
-            <p>Level: <%= spot.level %> </p>
+  <div>
+    <div class="d-flex justify-content-center" style="box-shadow: 0 10px 8px -5px rgba(0,0,0,0.1); background: rgba(255, 255, 255, 0.9); position: sticky; top: 0px;">
+      <%= simple_form_for :search, method: "get", class: 'form-inline' do |f| %>
+        <div class="d-flex">  
+         <div class="card mr-2 mb-n2 p-2" style="border: none; background: rgba(255, 255, 255, 0.4);">
+            <%= f.input :level, collection: Spot.level.values, as: :radio_buttons, required: false, input_html: {class: "tag-selector", value: params.dig(:search, :level) }, item_wrapper_class: 'tag-item' %>
           </div>
-          <div class="infos d-flex flex-column align-items-end">
-           <h2><i class="fas fa-map-marker-alt " style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %></h2>
-           <p class="text-right"><% spot.waves.times do %>
-            <%= image_tag("wave.png", width: 20, style: "margin-left: -6px;") %>
-           <% end %>
-          <br><i class="far fa-comment" style="color: rgba(0,0,0,0.6); "></i> <%= spot.reviews.count %> </p>
+         <div class="card ml-2 mb-n2 p-2" style="border: none; background: rgba(255, 255, 255, 0.4);">
+            <%= f.input :beach_type, collection: Spot.beach_type.values, as: :radio_buttons, required: false, input_html: {class: "tag-selector", value: params.dig(:search, :beach_type) }, item_wrapper_class: 'tag-item'%>
           </div>
         </div>
-      </div>
-    <% end %>
+        <div class="card mt-n2 p-2 form-inline" style="border: none; background: rgba(255, 255, 255, 0.4);">
+          <%= f.input :country, as: :string, required: false, input_html: {class: 'form-control-sm ml-2', style: "width: 400px;", value: params.dig(:search, :country) }%>
+        </div>
+          <div class="text-center p-2 m-0">
+          <%= f.submit "Search 🔍", class: "btn btn-primary mr-2" %>
+          <%= link_to "Reset the search", spots_path, class: "btn btn-primary ml-2" %>
+          </div>
+        <% end %>
+    </div>
+
+    <div class="cards my-5">
+      <% @spots.each do |spot| %>
+        <div class="card-spot">
+          <% if spot.photos.attached? %>
+            <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 350, crop: :fill), spot_path(spot)) %>
+          <% end %>
+          <div class="card-spot-infos d-flex justify-content-between align-items-start">
+            <div>
+              <h2><%= link_to spot.name, spot_path(spot) %></h2>
+              <p>Level: <%= spot.level %> </p>
+            </div>
+            <div class="infos d-flex flex-column align-items-end">
+            <h2><i class="fas fa-map-marker-alt " style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %></h2>
+            <p class="text-right"><% spot.waves.times do %>
+              <%= image_tag("wave.png", width: 20, style: "margin-left: -6px;") %>
+            <% end %>
+            <br><i class="far fa-comment" style="color: rgba(0,0,0,0.6); "></i> <%= spot.reviews.count %> </p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
   <div id="map"
      style="width: 100%; height: calc(100vh); position: sticky; top: 0; z-index: 500;"
