--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Trip to <%= @trip.spot.city %>
 
-<h3><%= @trip.start_date %> - <%= trip.end_date %></h3>
+<h3><%= @trip.start_date %> - <%= @trip.end_date %></h3>
 
 <div class ="container">
 <%= cl_image_tag(@trip.spot.photos.first.key, width: 300, crop: :fill) %>
