--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,9 +27,8 @@
   font-family: 'Staatliches', cursive;
   font-weight: light;
   font-size: 25px;
+  transition: transform .4s;
 }
 .btn-navbar:hover {
-  font-size: 28px;
-  transition: 0.4s;
-
+  transform: scale(1.1);
 }
